Added google tag manager support
updated analytics extension to use composite field
  - groups everything together

--- a/_config/config.yml
+++ b/_config/config.yml
@@ -4,3 +4,4 @@ Name: silverstripeintegration-configconfig
 Dynamic\IntegrationConfig\Model\IntegrationConfigSetting:
   extensions:
     - Dynamic\IntegrationConfig\ORM\GoogleAnalyticsDataExtension
+    - Dynamic\IntegrationConfig\ORM\GoogleTagManagerDataExtension
